# agentic-planner

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  test-ui-detailed.js  test-ui.js
backend/: README.md  alembic.ini  pyproject.toml
backend/src/workbench/: __init__.py  config.py  main.py
backend/src/workbench/api/: deps.py  router.py
backend/src/workbench/api/routes/: attempts.py  clarifications.py  jobs.py  signals.py
backend/src/workbench/db/: __init__.py  session.py
backend/src/workbench/db/migrations/: env.py
backend/src/workbench/db/migrations/versions/: 001_initial.py  79b778943b50_remove_signal_state.py
backend/src/workbench/models/: __init__.py  artifact.py  attempt.py  base.py  clarification.py  job.py  signal.py
backend/src/workbench/schemas/: __init__.py  artifact.py  attempt.py  clarification.py  common.py  job.py  signal.py
backend/src/workbench/services/: __init__.py  github_client.py  github_sync.py  job_service.py  prioritization.py
backend/src/workbench/worker/: __init__.py  classifier.py  executor.py  mock_client.py  runner.py  sandbox.py  sync_handler.py
backend/tests/: __init__.py  test_classifier.py  test_executor.py  test_executor_integration.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/attempts/: page.tsx
frontend/src/app/clarifications/: page.tsx
frontend/src/app/signals/: page.tsx
frontend/src/components/: ClientProviders.tsx  LogViewer.tsx
frontend/src/contexts/: WorkingSetContext.tsx
(+3 files in other folders)
